--- a/app/globals.css
+++ b/app/globals.css
@@ -2,3 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  width: 100%;
+  @apply bg-gray-100;
+  @apply text-sm
+  @apply text-gray-900;
+}
